--- a/config/otel-collector-config.yml
+++ b/config/otel-collector-config.yml
@@ -2,29 +2,26 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: 0.0.0.0:4317
+
 processors:
-extensions:
-  health_check: {}
+  batch:
+
 exporters:
-  otlp:
+  otlp/jaeger:
     endpoint: jaeger:4317
     tls:
       insecure: true
   prometheus:
     endpoint: 0.0.0.0:9090
     namespace: go-sandbox
-  debug:
 
 service:
-  extensions: [health_check]
   pipelines:
     traces:
       receivers: [otlp]
-      processors: []
-      exporters: [otlp, debug]
-
+      processors: [batch]
+      exporters: [otlp/jaeger]
     metrics:
       receivers: [otlp]
-      processors: []
-      exporters: [prometheus, debug]
+      processors: [batch]
+      exporters: [prometheus]
