--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
     ports:
       - 8080:8080 # Map the container port to the host port
     environment:
-      - HOST=locahost
+      - HOST=pub-service
       - PORT=:8080
       - LOG_LEVEL=info
-      - OTEL_EXPORTER_OTLP_ENDPOINT=jaeger:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=otel-collector:4317
       - OTEL_SERVICE_NAME=pub-service
       - OTEL_EXPORTER_OTLP_INSECURE=true
       - OTEL_SERVICE_NAMESPACE=go-sandbox
@@ -18,23 +18,31 @@ services:
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:0.101.0
+    container_name: otel-collector
     command: ["--config=/etc/otel-collector-config.yml"]
     volumes:
       - ./config/otel-collector-config.yml:/etc/otel-collector-config.yml
     ports:
-      - 4317:4317
+      - 4317 # OTLP over gRPC receiver
     depends_on:
       - jaeger
-      - prometheus
 
   jaeger:
     image: jaegertracing/all-in-one:1.57
+    container_name: jaeger
     ports:
       - 16686:16686
+      - "4317" # OTLP gRPC default port
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+      - METRICS_STORAGE_TYPE=prometheus
 
   prometheus:
     image: prom/prometheus:v2.52.0
+    container_name: prometheus
     volumes:
       - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
+    depends_on:
+      - otel-collector
