--- a/config/otel-collector-config.yml
+++ b/config/otel-collector-config.yml
@@ -2,26 +2,31 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: 0.0.0.0:4317
 
 processors:
-  batch:
+
+extensions:
+  health_check: {}
 
 exporters:
-  otlp/jaeger:
+  otlp:
     endpoint: jaeger:4317
     tls:
       insecure: true
   prometheus:
     endpoint: 0.0.0.0:9090
     namespace: go-sandbox
+  debug:
 
 service:
+  extensions: [health_check]
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch]
-      exporters: [otlp/jaeger]
+      processors: []
+      exporters: [otlp, debug]
     metrics:
       receivers: [otlp]
-      processors: [batch]
-      exporters: [prometheus]
+      processors: []
+      exporters: [prometheus, debug]
